[gd_scene load_steps=30 format=3 uid="uid://cwuwdhuq7v0dt"]

[ext_resource type="Script" path="res://scripts/player_movement.gd" id="1_jgec3"]
[ext_resource type="Texture2D" uid="uid://uf58ix6h5615" path="res://assets/sprites/knight.png" id="1_wwwbi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dcbwl"]
atlas = ExtResource("1_wwwbi")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0sgu"]
atlas = ExtResource("1_wwwbi")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_epi1e"]
atlas = ExtResource("1_wwwbi")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbbog"]
atlas = ExtResource("1_wwwbi")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvovb"]
atlas = ExtResource("1_wwwbi")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8d633"]
atlas = ExtResource("1_wwwbi")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugltq"]
atlas = ExtResource("1_wwwbi")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t6f3"]
atlas = ExtResource("1_wwwbi")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h25ym"]
atlas = ExtResource("1_wwwbi")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nhk4"]
atlas = ExtResource("1_wwwbi")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpxs7"]
atlas = ExtResource("1_wwwbi")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxyst"]
atlas = ExtResource("1_wwwbi")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rg5hf"]
atlas = ExtResource("1_wwwbi")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uons"]
atlas = ExtResource("1_wwwbi")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hh7tc"]
atlas = ExtResource("1_wwwbi")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ho7y"]
atlas = ExtResource("1_wwwbi")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iubmf"]
atlas = ExtResource("1_wwwbi")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ituv"]
atlas = ExtResource("1_wwwbi")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e68vs"]
atlas = ExtResource("1_wwwbi")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7878i"]
atlas = ExtResource("1_wwwbi")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fgbk"]
atlas = ExtResource("1_wwwbi")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2guy"]
atlas = ExtResource("1_wwwbi")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmxo6"]
atlas = ExtResource("1_wwwbi")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1swxg"]
atlas = ExtResource("1_wwwbi")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vt42l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcbwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0sgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epi1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbbog")
}],
"loop": true,
"name": &"attack",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvovb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8d633")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugltq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t6f3")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h25ym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nhk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpxs7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxyst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rg5hf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uons")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hh7tc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ho7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iubmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ituv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e68vs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7878i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fgbk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2guy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmxo6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1swxg")
}],
"loop": true,
"name": &"walking",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_anyef"]
radius = 5.0
height = 10.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gu8ik"]
radius = 11.0

[node name="player" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_jgec3")

[node name="sprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_vt42l")
animation = &"attack"
autoplay = "idle"
frame_progress = 0.155145

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_anyef")

[node name="player_hbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hbox"]
position = Vector2(-1, 3)
shape = SubResource("CircleShape2D_gu8ik")

[node name="attack_cooldown" type="Timer" parent="."]

[connection signal="body_entered" from="player_hbox" to="." method="_on_player_hbox_body_entered"]
[connection signal="body_exited" from="player_hbox" to="." method="_on_player_hbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
